needs more divs completed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
       width: 748px;
 
     }
+
+    .red{
+      background-color: red;
+      width: 320px;
+      height: 414px;
+    }
   </style>
 </head>
 
