--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
       display: grid;
       height: 748px;
       width: 748px;
+      background-color: black;
 
     }
 
+  
     .red{
       background-color: red;
       width: 320px;
