--- a/index.html
+++ b/index.html
@@ -33,21 +33,52 @@
       height: 748px;
       width: 748px;
       background-color: black;
+      grid-template-columns: 320px 198px 153px 50px;
+      grid-template-rows: 414px 130px 155px 22px;
+      gap: 9px;
 
     }
 
-  
+    .item{
+      background-color: whitesmoke;
+    }
+
     .red{
       background-color: red;
-      width: 320px;
-      height: 414px;
     }
 
     .white1{
-      background-color: white;
-      width: 428px;
-      height: 414px;
+      grid-column: span 3;
     }
+
+
+    .white2{
+      grid-row: span 2;
+    }
+
+    .white3{
+      grid-area: 2 / 2 / 4 / 4;
+    }
+
+    .blue{
+      background-color: blue;
+      border-bottom: 10px solid black;
+    }
+
+    .white4{
+      grid-row: span 2;
+    }
+
+    .yellow{
+      background-color: yellow;
+    }
+
+    .green{
+      background-color: green;
+    }
+
+  
+    
   </style>
 </head>
 
@@ -64,7 +95,7 @@
 
     <div class="item"></div>
     <div class="item yellow"></div>
-    <div class="item Black"></div>
+    <div class="item green"></div>
   </div>
 
 </body>
