--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mondrian Project</title>
-  <style>
-    /* 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mondrian Project</title>
+    <style>
+      /* 
     Write your CSS here 
     Gap Colour: #000
     White: #F0F1EC
@@ -19,85 +18,23 @@
     HINT: Remember you can't change the properties of grid lines.
     But grid lines are transparent!
     */
-    body{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-      padding: 0;
-      height: 100vh;
-    }
+    </style>
+  </head>
 
-    .container{
-      display: grid;
-      height: 748px;
-      width: 748px;
-      background-color: black;
-      grid-template-columns: 320px 198px 153px 50px;
-      grid-template-rows: 414px 130px 155px 22px;
-      gap: 9px;
+  <body>
+    <!-- Write your HTML here -->
+    <div class="container">
+      <div class="item red"></div>
+      <div class="item white1"></div>
+      <div class="item white2"></div>
+      <div class="item white3"></div>
 
-    }
+      <div class="item blue"></div>
+      <div class="item white4"></div>
 
-    .item{
-      background-color: whitesmoke;
-    }
-
-    .red{
-      background-color: red;
-    }
-
-    .white1{
-      grid-column: span 3;
-    }
-
-
-    .white2{
-      grid-row: span 2;
-    }
-
-    .white3{
-      grid-area: 2 / 2 / 4 / 4;
-    }
-
-    .blue{
-      background-color: blue;
-      border-bottom: 10px solid black;
-    }
-
-    .white4{
-      grid-row: span 2;
-    }
-
-    .yellow{
-      background-color: yellow;
-    }
-
-    .green{
-      background-color: green;
-    }
-
-  
-    
-  </style>
-</head>
-
-<body>
-  <!-- Write your HTML here -->
-  <div class="container">
-    <div class="item red"></div>
-    <div class="item white1"></div>
-    <div class="item white2"></div>
-    <div class="item white3"></div>
-
-    <div class="item blue"></div>
-    <div class="item white4"></div>
-
-    <div class="item"></div>
-    <div class="item yellow"></div>
-    <div class="item green"></div>
-  </div>
-
-</body>
-
+      <div class="item"></div>
+      <div class="item yellow"></div>
+      <div class="item green"></div>
+    </div>
+  </body>
 </html>
